--- a/client/404.html
+++ b/client/404.html
@@ -28,8 +28,15 @@
 
         h1 {
             color: #555;
+            font-size: 4em;
+            font-weight: 400;
+        }
+
+        h2 {
+            color: #888;
             font-size: 2em;
             font-weight: 400;
+            margin-bottom: 15px;
         }
 
         p {
@@ -53,7 +60,8 @@
     </style>
 </head>
 <body>
-    <h1>Page Not Found</h1>
+    <h1>404</h1>
+    <h2>Page Not Found</h2>
     <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 </html>
