Updated server config

--- a/client/componets.html
+++ b/client/componets.html
@@ -1,21 +1,15 @@
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css" media="screen">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
-  <script   src="http://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/demo.css" media="screen">
+  <link rel="stylesheet" href="css/componets.css" media="screen">
   <link rel="stylesheet" type="text/css" href="slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-  <script type="text/javascript" src="js/demoScripts.js"></script>
-  <script type="text/javascript" src="dropit/dropit.js"></script>
   <link rel="stylesheet" href="dropit/dropit.css">
 </head>
 
 <!-- Navbar -->
-
+<body>
 <header>
   <section class="nav nav-section">
     <nav class="nav nav-nav">
@@ -67,3 +61,9 @@
     </div>
   </div>
 </div>
+</body>
+
+<script type="text/javascript" src="jquery/jquery.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+<script type="text/javascript" src="js/demoScripts.js"></script>
+<script type="text/javascript" src="dropit/dropit.js"></script>
