Fix for jquery error, repo cleanup

--- a/client/componets.html
+++ b/client/componets.html
@@ -65,5 +65,5 @@
 
 <script type="text/javascript" src="jquery/jquery.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
-<script type="text/javascript" src="js/demoScripts.js"></script>
+<script type="text/javascript" src="js/componets.js"></script>
 <script type="text/javascript" src="dropit/dropit.js"></script>
